# notes-service-test-task

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
alembic/: env.py
docker_compose/: app.yaml  database.yaml  entrypoint.sh
src/: alembic.ini  config.py  logging.py  main.py
src/alembic/: env.py
src/alembic/versions/: 357623e3fefa_added_notes.py  ce70a6e0b041_initial.py
src/auth/: dependencies.py  exceptions.py  handlers.py  models.py  schemas.py  services.py
src/common/: exceptions.py
src/database/: connection.py  models.py
src/notes/: dependencies.py  exceptions.py  handlers.py  models.py  schemas.py  services.py
tests/: conftest.py  fixtures.py  mocks.py  test_auth.py
tests/auth_tests/: test_authenticated.py  test_login.py  test_register.py
tests/notes_tests/: test_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
