[tool.poetry]
name = "notes-service-test-task"
version = "0.1.0"
description = "Service to create notes. Developed for KODE internship test task."
authors = ["Nikeshhh <wityazkajit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}
sqlalchemy = "^2.0.32"
httpx = "^0.27.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.3.2"
trio = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
